update from Jekyller

--- a/_posts/2018-9-28-the-post-1569.md
+++ b/_posts/2018-9-28-the-post-1569.md
@@ -11,14 +11,10 @@ date: '2018-9-28'
 type: post
 layout: post
 published: true
-sha: 
+sha: 1612819ec553be3451fb1e94166b9685fca35c68
 slug: the-post-1569
 title: test
 
----
----
-layout: page
-title: 测试
 ---
 
 测试一下
